--- a/laravel-react/react/src/index.css
+++ b/laravel-react/react/src/index.css
@@ -1,38 +1,65 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+html, body, #root {
+  height: 100%;
+  width: 100%;
   margin: 0;
+  padding: 0;
+}
+
+header {
+  width: 100%;
+  height: 7vh;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  align-items: center;
+  background-color: #564787;
+}
+
+.logo {
+  height: 100%; /* Garde les proportions de l'image */
+  margin-right: 10px;
+}
+
+.title {
+  font-size: 1.5rem; /* Taille du texte */
+  color: #fff; /* Couleur du texte */
+}
+
+.app {
+  display: flex; /* Active Flexbox */
+  flex-direction: row; /* Aligne les éléments en ligne */
+  height: 93vh; /* Hauteur de l'élément */
+}
+
+.Left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+  height: 100%;
+  width: 25vh;
+  background-color: #DBCBD8;
+}
+
+.Right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 3;
+  background-color: #2222;
+  height: 100%;
+  width: 75vh;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: #1a1a1a;
+}
+
+p {
+  font-size: 1.6em;
+  color: #000000;
 }
 
 button {
