--- a/Lamanager/resources/css/modifpromo.css
+++ b/Lamanager/resources/css/modifpromo.css
@@ -46,7 +46,7 @@
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     width: 22%;
-    height: 30%;
+    height: 180px;
 }
 
 .promo-block label {
