--- a/Lamanager/resources/css/app.css
+++ b/Lamanager/resources/css/app.css
@@ -111,17 +111,23 @@ header a {
     align-items: center;
     justify-content: center;
     margin-right: 5vh;
-    background-color: #f2f2f2;
     width: 7vh;
     height: 5vh;
     font-size: 3vh;
     border-radius: 1vh;
 }
 
+.barre-outils-item{
+    background-color: lightgrey;
+}
+
 .barre-outils-item:hover{
     background-color: #ffffff;
 }
 
+.barre-outils-item-lock{
+    background-color: grey;
+}
 
 
 .app {
