--- a/Lamanager/resources/css/modifpromoadapt.css
+++ b/Lamanager/resources/css/modifpromoadapt.css
@@ -34,6 +34,7 @@
     flex-wrap: wrap;
     gap: 2%;
 
+
 }
 
 .td-block {
@@ -42,12 +43,11 @@
     margin-bottom: 2%;
     border-radius: 8px;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
-    width: 30%;
+    width: 32%;
     display: flex;
     flex-direction: column;
     gap: 1%;
-    height: 100%;
-    max-height: 350px;
+    height: 300px;
     justify-content: space-between; /* Add this line */
 }
 
@@ -58,9 +58,20 @@
 
 }
 
-.tp-groups {
+.tp-group {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 5px;
 
-    overflow-y: auto;
+}
+
+.tp-group input {
+    flex-grow: 1;
+    margin-right: 10px;
+    padding: 1%;
+    border-radius: 8px;
+    border: 2px solid #564787;
 }
 
 .td-block .td-group input {
@@ -115,7 +126,7 @@
 .custom-button-container-mod {
     position: fixed;
     right: 12%;
-    bottom: 19%;
+    bottom: 14%;
 
     z-index: 3000;
 }
@@ -127,6 +138,7 @@
     border: none;
     margin-left: 10px;
 
+
     border-radius: 4px;
     cursor: pointer;
 
@@ -136,3 +148,69 @@
     background-color: #453a6b;
 }
 
+
+.tp-group-buttons {
+    display: flex;
+    gap: 5px;
+    margin-bottom: 2%;
+}
+
+.tp-group-buttons button {
+    background-color: #564787;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding-right: 10px;
+    padding-bottom: 2px;
+    padding-left: 10px;
+
+    cursor: pointer;
+}
+
+.tp-group-buttons button:hover {
+    background-color: #453a6b;
+}
+
+.tp-groups {
+    max-height: 62%;
+    overflow-y: auto;
+}
+
+.td-block-aj{
+    background-color: white;
+
+    margin-bottom: 2%;
+    border-radius: 8px;
+
+    width: 32%;
+    display: flex;
+    flex-direction: column;
+    gap: 1%;
+    height: 30%;
+    justify-content: space-between; /* Add this line */
+}
+.td-group-aj {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    margin-top: 30%;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.td-group-aj button {
+    background-color: #564787;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+}
+
+.td-group-aj button:hover {
+    background-color: #453a6b;
+}
