--- a/Lamanager/resources/css/app.css
+++ b/Lamanager/resources/css/app.css
@@ -255,11 +255,12 @@ p {
 }
 
 .popup-overlay {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
@@ -888,7 +889,7 @@ button[disabled]
 
 
 .custom-popup-overlay-unique {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
