--- a/Lamanager/resources/css/modifpromo.css
+++ b/Lamanager/resources/css/modifpromo.css
@@ -45,7 +45,7 @@
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    width: 22%;
+    width: 180px;
     height: 180px;
 }
 
