--- a/Lamanager/resources/css/app.css
+++ b/Lamanager/resources/css/app.css
@@ -1082,3 +1082,9 @@ button[disabled]
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+.circle-user {
+    width: 3%;
+    height: auto;
+
+}
